# motionberry

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  config.default.yml  config.yml  entrypoint.sh  motion_capture.py  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: dockerhub-description.yml  release-please.yml
app/: __init__.py  config_watcher.py  utils.py
app/api/: routes.py
app/lib/camera/: camera_manager.py  camera_process.py  file_manager.py  motion_detector.py  status_manager.py  stream_manager.py  video_processor.py
app/lib/camera/algorithms/: __init__.py  background_subtraction_algorithm.py  base_algorithm.py  frame_diff_algorithm.py
app/lib/notification/: event_notifier.py  logging_notifier.py  notifier.py  webhook_notifier.py
app/lib/transcode/: ffmpeg_transcoder.py  mkv_transcoder.py  mp4_transcoder.py  null_transcoder.py  video_transcoder.py
app/static/: scripts.js  styles.css
app/static/css/: styles.css
app/templates/: base.html  index.html
app/ui/: __init__.py  routes.py
docs/: index.html  openapi.json
docs/examples/: nodered-slack.md  performance.md
scripts/: configure.sh  install.sh  uninstall.sh
swagger/: swagger-initializer.js
