[metadata]
name = motionberry
version = attr: app.version.__version__
author = j3ko
author_email = j3ko@users.noreply.github.com
description = A lightweight solution for motion detection and video streaming on Raspberry Pi, powered by picamera2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j3ko/motionberry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Flask==3.1.0
    numpy==1.26.3
    Pillow==11.0.0
    PyYAML==6.0.2
    Requests==2.32.3
    apispec==6.8.1
    apispec-webframeworks==1.2.0
    marshmallow==3.24.1

[options.packages.find]
where = .
include = app.*
